fixing alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
 .gamepage {
   display: flex;
 }*/
-.gamepage, section{
+.wrapper, section{
 	background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
 
 }
@@ -98,7 +98,7 @@ header a {
 }
 
 .left {
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
